actor-apps/app-web/src/styles/messages.scss
/*
 * Copyright (C) 2015 Actor LLC. <https://actor.im>
 */

.dialog {
  position: relative;
  &--empty {
    opacity: .3;
  }
}

.messages {
  position: relative;
  &__list {
    position: absolute;
    top: 0;
    bottom: 0;

    overflow-x: hidden;
    overflow-y: auto;

    width: 100%;
    margin: 0;
    padding: 0;

    list-style: none;
  }
}

.message {
  margin-top: 24px;
  padding: 0 32px;

  &__header {
    font-weight: 500;

    display: block;

    height: 20px;
    margin: 0 0 4px;
  }
  &__sender {
    font-size: 15px;
    font-weight: 500;
    line-height: 20px;

    display: inline-block;

    margin: 0;
    padding: 0;

    vertical-align: middle;

    color: $message-sender-text-color !important;

    a {
      display: inline-block;

      cursor: pointer;
    }

    .emoji-outer {
      width: 20px;
      height: 20px;
    }
  }
  &__timestamp {
    font-size: 12px;
    //line-height: 20px;

    display: inline-block;

    margin-top: 2px;
    margin-left: 8px;

    user-select: none;
    vertical-align: middle;
    text-transform: lowercase;

    color: $message-timestamp-color;
  }
  &__status {
    line-height: 20px;

    display: inline-block;

    margin-left: 8px;

    user-select: none;
    vertical-align: middle;
  }

  &__info {
    line-height: 1px;

    width: 62px;
    .avatar {
      margin: 0 14px 0 12px;
    }
    a > .avatar {
      cursor: pointer;
    }
  }
  &__content {
    line-height: $message-line-height;
    &--service {
      font-size: 14px;
      font-style: italic;

      color: $message-service-text-color;
    }
    &--unsupported {
      color: rgba(red, .3);
    }
    &--text {
      font-size: 15px;

      margin: 0;

      color: $message-text-color;

      // Styles for markdown
      p {
        margin: 0 0 7px;

        word-wrap: break-word;
        //word-break: keep-all;
        &:last-child {
          margin-bottom: 0;
        }
      }
      ul,
      ol {
        margin: 6px 0;
        padding-left: 24px;
      }
      h1,
      h2,
      h3,
      h4,
      h5 {
        margin: 6px 0;
      }
      blockquote {
        margin: 8px 0 16px 12px;
        padding-left: 16px;

        border-left: 3px solid $body-base-color;
        &:last-child {
          margin-bottom: 0;
        }
      }
      a {
        text-decoration: none;

        color: $body-base-color;
        &:hover {
          text-decoration: underline;
        }
      }
    }
    &--photo {
      position: relative;
      //display: inline-block;

      overflow: hidden;

      &--wide {
        width: 100% !important;
        height: auto !important;
      }
      &--loaded {
        .photo--original {
          visibility: visible !important;

          transform: scale(1) !important;

          opacity: 1 !important;
        }
        .photo--preview {
          display: none !important;
        }
      }
      .photo {
        line-height: 0;

        max-width: 100%;
        height: auto;
        &--preview {
          display: block;

          width: 100%;

          transform: scale(1.02);

          filter: url(#blur-effect);
          filter: blur(3px);
          filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3');
        }
        &--original {
          visibility: hidden;

          width: 100%;
          height: auto;

          cursor: pointer;
          transition: transform $default-transition-duration $default-transition-timing;
          transform: scale(1.02);

          opacity: 0;
        }
      }
      .preloader {
        position: absolute;
        z-index: 10;
        top: 50%;
        left: 50%;

        margin-top: -12px;
        margin-left: -20px;
      }
      svg {
        display: none;
      }
      .actions {
        position: absolute;
        z-index: 5;
        top: 6px;
        right: 6px;

        padding: 4px;

        opacity: 0;
        a {
          display: block;

          cursor: pointer;

          opacity: .4;
          color: white;
          border-radius: 3px;
          background-color: rgba(black, .4);
          &:hover {
            opacity: .9;
            background-color: rgba(black, .2);
          }
        }
      }
      &:hover {
        .actions {
          opacity: 1;
        }
      }
    }
    &--document {
      .document {
        line-height: 18px;

        padding: 8px 10px 8px 8px;

        transition: background $default-transition-duration $default-transition-timing;
        //text-decoration: none;

        border-radius: 3px;
        background-color: rgba(darken($body-base-color, 0), .07);

        &__icon {
          display: block;

          width: $message-document-icon-size;
          height: $message-document-icon-size;
          margin-right: 8px;

          text-align: center;

          color: $body-base-color;
          background-color: white;
          box-shadow: 0 1px 3px -1px rgba($body-base-color, .2);
          i {
            line-height: $message-document-icon-size;
          }
        }
        &__filename {
          font-size: 14px;
          font-weight: 500;
          line-height: 24px;

          display: inline-block;

          vertical-align: middle;
          text-decoration: none;

          color: $message-text-color;
        }
        &__meta {
          font-size: 14px;
          line-height: 20px;

          text-transform: uppercase;

          color: rgba($message-text-color, .3);
          &__ext {
            margin-left: 6px;
          }
        }
        &__actions {
          font-size: 14px;
          line-height: 20px;
          a {
            text-decoration: none;

            color: $body-base-color;
            &:hover {
              text-decoration: underline;
            }
          }
        }
      }
    }
  }

  &--same-sender {
    margin-top: 6px;
    padding: 0 32px 0 10px;
    .message__info {
      box-sizing: border-box;
      width: 84px;
      padding-right: 14px;
    }
    .message__status {
      margin-left: 4px;
    }
    .message__timestamp {
      line-height: 20px;

      margin: 0;

      opacity: 0;
    }
  }

  &:hover {
    .message__info .message__timestamp,
    .dropdown__button {
      opacity: 1;
    }
  }

  .dropdown {
    &__button {
      line-height: 20px;

      width: 20px;
      height: 20px;

      opacity: 0;
      color: rgba(0, 0, 0, .2);
    }
    &__menu {
      top: auto;
      right: 24px;
      bottom: 0;

      min-width: 200px;
    }

    &--opened {
      .dropdown__button {
        color: rgba(0, 0, 0, .7);
      }
    }
  }
}

.date-divider {
  font-size: 14px;
  font-weight: 500;

  padding: 24px 32px 0 43px;

  color: $havelock-blue;
}

